# microservice-fuhrparkverwaltung

./: Dockerfile  README.md  docker-compose.yml  start_single_service.sh
Datenbank/: Cargo.toml  Dockerfile  db.cnf
Datenbank/restapi/: Cargo.toml
Datenbank/restapi/src/: Database.rs  main.rs
Datenbank/sqlData/: data.sql
Logik/: Cargo.toml
Logik/src/: main.rs  rest_api.rs
Rest_Api/: Cargo.toml  Dockerfile
Rest_Api/src/: main.rs
api_gateway/: Dockerfile
api_gateway/config/: nginx.conf
datenbank/: Dockerfile
datenbank/sqlData/: data.sql
restApi/: Cargo.toml  Dockerfile
restApi/src/: auth.rs  authclient.rs  cache.rs  circuitbreaker.rs  client.rs  main.rs
rest_api/: Cargo.toml  Dockerfile
rest_api/src/: auth.js  cache.js  circuitBreaker.js  httpClient.js  main.rs  package.json  server.js
wasm_logik/: Cargo.toml
wasm_logik/src/: client.rs
