[package]
name = "microservice_fuhrparkverwaltung"
version = "0.0.1"
authors = ["thoeff2s"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httpcodec = "0.2.3"
bytecodec = "0.4.15"
wasmedge_wasi_socket = "0.4.1"
regex = "0.2"
# uuid = "1.1.2"
# suborbital = "0.15.1"