[package]
name = "microservice_fuhrparkverwaltung"
version = "0.0.1"
authors = ["thoeff2s"]
edition = "2018"

[[bin]]
name = "restapi"
path = "./src/main.rs"

[dependencies]
rocket = "0.4.11"
postgres = "0.19.4"
serde = { version = "1.0.145", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json"]