[package]
name = "microservice_fuhrparkverwaltung"
version = "0.0.1"
authors = ["thoeff2s"]
edition = "2021"

[[bin]]
name = "restapi"
path = "./src/main.rs"

[dependencies]
# Spezieller Error Type für std::error::Error
anyhow = "1.0"
# Um Json zu serialisieren
serde_json = "1.0"
# Generelles serialisierungs und desiralisierungs Framework
serde = { version = "1.0", features = ["derive"] }
# URL Bibliothek basierend auf dem WHATWG URL Standard
url = "2.3"
# Tokio Basierende Asynchrone MySQL Bibliothek die von der Originallen mysql_async Lib basiert
# Es kompiliert aber nun zusätzlich für WASM
mysql_async_wasi = "0.30"
# HTTP Implementierung für Rust
# Basiert auf dem Originalen Hyper mit zusätzlichen Support für Wasm
hyper_wasi = { version = "0.15", features = ["full"] }
# Asynchrone Applikationen in Rust
# Ebenfalls basierend auf der originalen Tokio Lib , zusätzlich mit WASM
tokio_wasi = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
regex = "0.2"
wasmedge_http_req = "0.9.0"
chrono = "0.4.23"
lazy_static = "1.4.0"